--- a/src/core/components/Topbar/TopBarContent.module.scss
+++ b/src/core/components/Topbar/TopBarContent.module.scss
@@ -2,13 +2,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    position: fixed;
     width: 100%;
     background-color: rgb(53, 53, 53);
-    height: 20%;
+    height: 130px;
+    position: sticky;
+
+    transition: .5s ease-in-out ;
+    
     .SingleContent {
         display: flex;
         flex-direction: column;
+        text-decoration: none;
         background-color: rgba(131, 131, 131, 0.527);
         color:white;
         width:100%;
@@ -17,14 +21,17 @@
         align-items: center;
         
         &:hover {
-            background-color:rgba(131, 131, 131, 0.7)
+            background: rgb(179,179,179);
+            background: radial-gradient(circle, rgba(133,133,133,0.7) 1%, rgba(130,130,130,0.53) 43%);
+            cursor: pointer;
         }
 
         &:hover i {
-            color:rgba(200, 163, 163, 0.7)
+            color:rgba(255, 253, 163, 0.664)
         }
 
         i {
+            top: 0;
             margin: 10px;
             color:rgba(131, 131, 131, 0.7);
         }
