--- a/src/core/consts/custom.scss
+++ b/src/core/consts/custom.scss
@@ -1,9 +1,23 @@
 .search-input {
     border: none;
     outline: none;
+    width: 100%;
 }
 
 .search-wrapper {
     background-color: white;
     padding: 3px 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 50%
+}
+
+.search-box {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
