--- a/src/core/components/Topbar/TopBarContent.module.scss
+++ b/src/core/components/Topbar/TopBarContent.module.scss
@@ -4,14 +4,14 @@
     justify-content: space-between;
     width: 100%;
     background-color: rgb(53, 53, 53);
-    height: 130px;
+    height: 50px;
     position: sticky;
 
     transition: .5s ease-in-out ;
     
     .SingleContent {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         text-decoration: none;
         background-color: rgba(131, 131, 131, 0.527);
         color:white;
