--- a/src/core/consts/SignInForm.scss
+++ b/src/core/consts/SignInForm.scss
@@ -1,4 +1,4 @@
-.SignInForm {
+.sign-in-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +8,7 @@
     background-color: rgb(245, 245, 245);
 }
 
-.SignInPage {
+.sign-in-page {
     display: flex;
     flex-direction: column;
     justify-content: center;
