--- a/src/core/components/Topbar/TopBarContent.module.scss
+++ b/src/core/components/Topbar/TopBarContent.module.scss
@@ -1,3 +1,5 @@
+@import '../../../core//consts/Media.scss';
+
 .WholeTopBarContent {
     display: flex;
     flex-direction: row;
@@ -19,6 +21,12 @@
         height: 100%;
         justify-content: center;
         align-items: center;
+
+        @include for-phone-only {    
+            span {
+                display: none
+            }
+         }
         
         &:hover {
             background: rgb(179,179,179);
