--- a/src/core/consts/Background.scss
+++ b/src/core/consts/Background.scss
@@ -1,4 +1,4 @@
-.Box {
+.box {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +8,7 @@
     background-color: rgb(245, 245, 245);
 }
 
-.Background-box {
+.background-box {
     width: 100%;
     height: 100vh;
 }
