--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './core/styles/base.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
