--- a/src/core/consts/SignInForm.scss
+++ b/src/core/consts/SignInForm.scss
@@ -16,4 +16,8 @@
     width: 100%;
     height:100%;
     background-color: rgb(245, 245, 245);
+    
+    h1 {
+        text-align: center;
+    }
 }
