--- a/src/core/styles/fonts.scss
+++ b/src/core/styles/fonts.scss
@@ -1,7 +1,162 @@
 @import 'media.scss';
+@import 'colors.scss';
+
+$font-body-size: 16px;
+
+$font-edit-size: 16px;
+$font-label-size: $font-edit-size;
+$font-label-focus-size: 12px;
+
+$font-edit-size-t: 24px;
+$font-label-size-t: $font-edit-size-t;
+$font-label-focus-size-t: 14px;
+
 
 @mixin font-footer {
+
 	font-family: 'Roboto', sans-serif;	
 	font-size: 14px;
 	font-weight: 300;
+}
+
+@mixin font-footer-group {
+
+	font-family: 'Roboto', sans-serif;	
+	font-size: 18px;
+	font-weight: 300;
+	font-variant: small-caps;
+}
+
+@mixin font-edit {
+
+	font-family: 'Roboto', sans-serif;	
+	font-size: $font-edit-size;
+	font-weight: 400;
+	@include for-tiny-desktop {
+		font-size: $font-edit-size-t;
+	}    
+}
+
+@mixin font-label {
+
+	font-family: 'Roboto', sans-serif;	
+	font-size: $font-edit-size;
+	font-weight: 400;
+	@include for-tiny-desktop {
+
+		font-size: $font-edit-size-t;
+	}
+}
+
+@mixin font-label-focus {
+
+	font-size: $font-label-focus-size;
+	@include for-tiny-desktop {
+
+		font-size: $font-label-focus-size-t;
+	}
+}
+
+@mixin ctrl-component { 
+
+    display: inline-block;
+	position: relative; 
+
+    width: 100%;
+
+    border-radius: 5px;
+    border: 1px solid $color-ctrl-border-basic; 
+
+    background-color: white;
+    transition: border-color 0.33s;
+}
+
+@mixin ctrl-select { 
+	.value {
+		@include font-edit;
+		color: $color-ctrl-text; 
+
+		outline: none;
+		border: none; 
+		padding: 0px;
+		margin: 0; 
+		width: 100%;
+		background-color: transparent;
+	}
+}
+
+@mixin ctrl-input { 
+	.value {
+		@include font-edit;
+		color: $color-ctrl-text; 
+
+		outline: none;
+		border: none; 
+		padding: 0px;
+		margin: 0; 
+		width: 100%;
+		background-color: transparent;
+	}
+}
+
+@mixin ctrl-label {
+
+	.label { 
+		@include font-label;
+		color: $color-label-text; 
+
+		position: absolute;
+		background-color: transparent;
+		transition: all 0.33s ease-in-out;
+		pointer-events: none;
+	}
+
+	.labelFocus {
+		@include font-label-focus;
+		color: $color-label-focus-text;
+		background-color: inherit;
+	}
+}
+
+@mixin nca-ctrl( $value-font-size ) {
+
+	$focus-label-font-size: ($value-font-size*3)/4; 
+	$margin-top: $focus-label-font-size;
+
+	// border-top-width: 1px;
+
+	$padding-top: ($focus-label-font-size/2);
+	$padding-bottom: $value-font-size/6;
+	$label-top: $padding-top + $padding-bottom;
+
+	margin-top: $margin-top;
+	padding-top: $padding-top;
+	padding-bottom: $padding-bottom;
+	padding-left: 6px;
+	padding-right: 6px;
+
+	input {
+
+		font-size: $value-font-size;
+	}
+
+	label { 
+		font-size: $value-font-size;
+		top: $padding-top;
+		left: 6px;
+	}
+
+	.labelFocus {
+
+		font-size: $focus-label-font-size;
+		top: -$label-top;
+	}
+}    
+
+@mixin nca-ctrl-for-tiny-desktop ( $value-font-size: 28px ) {
+
+	@include for-tiny-desktop {
+
+		@include nca-ctrl( $value-font-size ); 
+	}
 }
