--- a/src/core/ctrls/errorbox/ErrorBox.module.scss
+++ b/src/core/ctrls/errorbox/ErrorBox.module.scss
@@ -11,10 +11,10 @@
     font-size: 80%;
     transition: 1.0s ease-in-out; 
     padding: 1px 6px 1px 6px;
-    background-color: lighten(coral,20%);
-    box-shadow: 0 8px 10px -5px rgba(255,0,0,0.4);
-    filter: drop-shadow(0 8px 10px -5px rgba(255,0,0,0.4));
-    border: 1px solid coral;
+    background-color: lighten($color-warning,50%);
+    box-shadow: 0 5px 5px -5px adjust-color($color-warning, $alpha:-0.6);
+    filter: drop-shadow(0 8px 10px -5px adjust-color($color-warning, $alpha:-0.4));
+    border: 1px solid $color-warning;
     border-radius: 5px;
     z-index: 1;
 
@@ -30,7 +30,7 @@
     & > div {
         @include font-label-focus;
         
-        border-bottom: 1px solid lighten(red,47%);
+        border-bottom: 1px solid $color-warning;
         padding: 6px 0px 6px 0px;
         margin-bottom: 5px;
     }
@@ -59,5 +59,6 @@
         z-index: -1;
         border: none;
         background: inherit;
+        border-radius: inherit;
     }
  }
