--- a/src/core/ctrls/ErrorBox.module.scss
+++ b/src/core/ctrls/ErrorBox.module.scss
@@ -1,5 +1,4 @@
-@import './../../styles/media.scss';
-@import './../../styles/fonts.scss';
+@import './_ctrls.scss';
 
 .errorBox {
     position: relative;
