--- a/src/core/ctrls/ErrorBox.module.scss
+++ b/src/core/ctrls/ErrorBox.module.scss
@@ -5,7 +5,6 @@
     pointer-events: initial;
     opacity: 0.0;
     left: -6px;
-    bottom: 100%;
     text-align: left;
     font-size: 80%;
     transition: 1.0s ease-in-out; 
@@ -20,6 +19,7 @@
     &.isPopup {
         position: absolute;
         pointer-events: none;
+        bottom: 100%;
     }
 
     &.isVisible {
@@ -45,7 +45,7 @@
         transform: scale(0.9) rotate(45deg);
         border: inherit;
         background: inherit;
-        box-shadow: 5px 5px 10px -2px rgba(255,0,0,0.4);
+        box-shadow: inherit;
     }
     
     &::after {
