--- a/src/core/ctrls/_ctrls.scss
+++ b/src/core/ctrls/_ctrls.scss
@@ -66,12 +66,12 @@
 
 @mixin nca-ctrl( $value-font-size ) {
 
-	$focus-label-font-size: ($value-font-size*3)/4; 
+	$focus-label-font-size: round(($value-font-size*3)/4); 
 	$margin-top: $focus-label-font-size;
 
 	// border-top-width: 1px;
 
-	$padding-top: ($focus-label-font-size/2);
+	$padding-top: round(($focus-label-font-size/2));
 	$padding-bottom: $value-font-size/6;
 	$label-top: $padding-top + $padding-bottom;
 
