--- a/src/mode-guest/Topbar/Notifications.module.scss
+++ b/src/mode-guest/Topbar/Notifications.module.scss
@@ -16,4 +16,11 @@
     z-index: 999;
     display: flex;
     flex-direction: column;
+    padding: 3px 5px;
+    overflow: scroll;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
 }
