--- a/src/coin/pages/Coin.module.scss
+++ b/src/coin/pages/Coin.module.scss
@@ -19,7 +19,9 @@
     .photo {
         width: 100%;
         height: 70%;
-        background: red;
+        background: url('../../assets/logo-512.png');
+        background-repeat: no-repeat;
+        background-size: 95%;
         border-radius: 2px;
     }
 
