--- a/src/coin/pages/CoinList.module.scss
+++ b/src/coin/pages/CoinList.module.scss
@@ -2,4 +2,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    padding: 0 20px;
+}
+
+.coinsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
