--- a/src/user/pages/UserPage.module.scss
+++ b/src/user/pages/UserPage.module.scss
@@ -17,6 +17,8 @@
 .photo {
     width: 100%;
     height: 100px;
-    background-color: grey;
+    background: url('../../assets/coins.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
     position: relative;
 }
