--- a/src/user/pages/UserPanel.module.scss
+++ b/src/user/pages/UserPanel.module.scss
@@ -1,4 +1,4 @@
-.userPanel {
+.userBar {
     width: 100%;
     height: 40px;
     background-color: black;
@@ -6,5 +6,13 @@
     justify-content: space-around;
     color: white;
     align-items: center;
-    padding: 0 40%
+    padding: 0 30%;
+
+}
+
+.userPanel {
+    position: relative;
+    width: 100%;
+    min-height: 600px;
+    max-height: max-content;
 }
