--- a/src/mode-guest/Topbar/Notifications.module.scss
+++ b/src/mode-guest/Topbar/Notifications.module.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     padding: 3px 5px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .header {
