--- a/src/coin/pages/AddCoinForm.module.scss
+++ b/src/coin/pages/AddCoinForm.module.scss
@@ -1,4 +1,156 @@
+@import '../../core//styles/colors.scss';
+
 .form {
     display: flex;
+    flex-direction: row;
+}
+
+.section {
+    width: 840px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.section2 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.AddCoinFormContainer {
+    display: flex;
+    padding: 5% 0;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.aboutCoinInput {
+    width: 100%;
+    height: 100%;
+}
+
+.CoinContainer {
+    min-width: 220px;
+}
+
+.formContainer {
+    display: flex;
     flex-direction: column;
+}
+
+.DummyCoin {
+
+    width: 200px;
+    height:250px;
+    background: white;
+    padding:5px;
+    border: 2px solid transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 1s ease;
+    border-radius: 2px;
+    margin: 1px;
+
+    .photo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 70%;
+        color: rgb(116, 114, 114);
+        border-radius: 2px;
+        background-color: rgb(209, 202, 202);
+        cursor: pointer;
+        &:hover {
+            background-color: rgb(167, 160, 160);
+            color: rgb(78, 77, 77);
+        }
+    }
+
+    .informations {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        font-size: 12px;
+        margin-top: 5px;
+    }
+}
+
+.AddPhoto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70%;
+    color: rgb(116, 114, 114);
+    border-radius: 2px;
+    background-color: rgb(209, 202, 202);
+    cursor: pointer;
+    &:hover {
+        background-color: rgb(167, 160, 160);
+        color: rgb(78, 77, 77);
+    }
+}
+
+
+img {
+    max-width:12rem;
+}
+
+.AddPhotosSection {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+    .AddCoinPhoto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 12rem;
+    height: 12rem;
+    color: rgb(116, 114, 114);
+    border-radius: 2px;
+    background-color: rgb(209, 202, 202);
+    cursor: pointer;
+
+    input {
+        display: none;
+    }
+
+
+    &:hover {
+        background-color: rgb(167, 160, 160);
+        color: rgb(78, 77, 77);
+    }
+}
+}
+
+.AddCoinPhotoForm {
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 50%;
+    height: min-content;
+    z-index: 5;
+    background-color: white;
+    border: 1px solid $color-btn-face;
+    display: flex;
+    flex-direction: column;
+
+    .buttons {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        padding: 5% 10%;
+    }
 }
