--- a/src/coin/pages/Coin.module.scss
+++ b/src/coin/pages/Coin.module.scss
@@ -12,6 +12,7 @@
     align-items: center;
     transition: 1s ease;
     border-radius: 2px;
+    margin: 1px;
     &:hover {
         border: 2px solid $color-desktop-link;
     }
@@ -19,7 +20,6 @@
     .photo {
         width: 100%;
         height: 70%;
-        background: url('../../assets/logo-512.png');
         background-repeat: no-repeat;
         background-size: 95%;
         border-radius: 2px;
