--- a/src/mode-guest/Topbar/Information.module.scss
+++ b/src/mode-guest/Topbar/Information.module.scss
@@ -4,6 +4,16 @@
     max-width: 100%;
     padding: 5px 3px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    transition: 1s ease-in-out;
+
+    .deleteInformation {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 5px;
+        width:35px;
+        color: grey;
+    }
 }
 
 .informationBody {
@@ -23,7 +33,7 @@
 .informationDetails {
     display: flex;
     flex-direction: column;
-    width:214px;
+    width:190px;
 }
 
 .informationHeader {
@@ -39,4 +49,40 @@
     align-items: center;
     justify-content: center;
     font-size: 13px;
+}
+
+.delete {
+    border-top: 1px solid white;
+    background-color: rgba(240, 24, 24, 0.863);
+    transition: 1s ease-in-out;
+    height: 54px;
+    padding: 5px 3px;
+
+    .deleteTitle {
+        text-align: center;
+    }
+
+    .deleteOptions {
+        display: flex;
+        justify-content: space-around;
+
+        span {
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
+        .optionNo {
+            padding: 2px 10px;
+            border-radius: 5px;
+            background-color: rgb(153, 63, 63);
+        }
+
+        .optionYes {
+            padding: 2px 10px;
+            border-radius: 5px;
+            background-color: rgb(44, 153, 44);
+        }
+    }
+
 }
