--- a/src/user/pages/sections/UserInformations.module.scss
+++ b/src/user/pages/sections/UserInformations.module.scss
@@ -10,9 +10,11 @@
     margin: 0 40px 0 0;
 }
 .Avatar {
-    background-color: black;
+    background: url('../../../assets/avatar.jpg');
     width: 200px;
     height: 200px;
+    background-position: center;
+    background-repeat: round;
 }
 
 .UserInformations {
