--- a/src/core/styles/media.scss
+++ b/src/core/styles/media.scss
@@ -25,28 +25,28 @@
 }
 
 @mixin for-tablet {
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) { 
+    @media only screen and (min-width: 481px) and (max-width: 1024px) { 
         @content; 
     }
 }
 
 @mixin for-tablet-portrait {
     /* For portrait layouts only */
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+    @media only screen and (min-width: 481px) and (max-width: 1024px) and (orientation:portrait) {
         @content;
     }
 }
 
 @mixin for-tablet-landscape {
     /* For landscape layouts only */
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+    @media only screen and (min-width: 481px) and (max-width: 1024px) and (orientation:landscape) {
 	    @content;
     }
 }
 
 @mixin for-phone-only {
     /* styles for mobile browsers smaller than 480px; (iPhone) */
-    @media only screen and (max-device-width: 480px) { 
+    @media only screen and (max-width: 480px) { 
         @content; 
     }
 }
