--- a/src/mode-guest/landing-page/BannerHolder/BannerHolder.module.scss
+++ b/src/mode-guest/landing-page/BannerHolder/BannerHolder.module.scss
@@ -1,12 +1,20 @@
 @import '../../../core/styles/colors.scss';
+@import '../../../core/styles/media.scss';
 
 .holder {
-
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     width: 100%;
-    height: 90vh;
+    @include for-phone-only {    
+        width: 90%;
+    }
+
+    @include for-desktop {
+        width: max-content;
+    }
+
+    margin: 0 auto;
+    height: min-content;
     background-color: $color-app-workspace;
 }
