--- a/src/user/pages/UserPage.module.scss
+++ b/src/user/pages/UserPage.module.scss
@@ -17,7 +17,7 @@
 .photo {
     width: 100%;
     height: 100px;
-    background: url('../../assets/coins.jpg');
+    background: url('../../assets/bg-photo.jpg');
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
