--- a/src/core/ctrls/Check.module.scss
+++ b/src/core/ctrls/Check.module.scss
@@ -4,7 +4,7 @@
 .container {
 
     @include font-label-focus;
-    color: $color-btn-text;
+    color: $color-window-text;
     display: inline-block;
     position: relative;
     padding-left: $font-edit-size + 6;
