--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $color-app-workspace;
+  color: $color-window-text;
 }
 
 code {
